# chess-pgn

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  game.cpp  game.hpp  main.cpp  pgn.l  pgn.lex.c  pgn.tab.c  pgn.tab.h  pgn.y
src/tests/: tests.cpp  tests_highload.cpp
src/tests/pgn/: fischer.pgn
